Updated banner with placeholder image

--- a/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_grid.less
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_grid.less
@@ -3,7 +3,8 @@
     font-size: 21px;
     margin: 0 0 .5em;
     line-height: 28px;
-    font-weight: bold;
+    font-weight: 500;
+    font-family: "Roboto";
 }
 
 .grid .grid-text {
