--- a/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_nav.less
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_nav.less
@@ -38,7 +38,7 @@
 }
 
 .dropdown-menu > li:last-child {
-    border-bottom:none;
+    border-bottom: none;
 }
 
 .dropdown-menu.with-arrow {
@@ -93,8 +93,8 @@
 
 .dropdown-menu.with-icons > li > a > .icon {
     position: absolute;
-    left: 22px;
-    font-size: 24px;
-    color: #3498db;
-    top: 16px;
+    left: 16px;
+    font-size: 13px;
+    color: #A8A8A8;
+    top: 31px;
 }
