--- a/Rainbow.WebMvc/Rainbow.WebMvc/Views/Home/Home.cshtml
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Views/Home/Home.cshtml
@@ -12,7 +12,8 @@
                 <span class="normal">Day Nursery</span>
             </h1>
             <p class="lead">
-                Something to say about
+                (A summary of our approach to taking <br />
+                care of your child including the center <br />and the approach taken by the workers)
             </p>
         </div>
     </div>
@@ -71,14 +72,12 @@
                 <h2 class="text-center">Registry</h2>
             </div>
             <div class="section-body">
-                <div class="grid">
-                    <div class="grid-cell">
-                        <p>Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah </p>
-                        <p class="center-text">
-                            <a class="button-lg attention-grabber">ONLINE REGISTRY</a>
-                        </p>
-                    </div>
-                </div>
+                <p class="center-text">Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah </p>
+            </div>
+            <div class="section-footer">
+                <p class="center-text">
+                    <a href="http://www.gov.mb.ca/fs/parentupdate/index.html" target="_blank" class="button-lg attention-grabber">ONLINE REGISTRY</a>
+                </p>
             </div>
         </div>
     </div>
@@ -160,12 +159,12 @@
                                         <div class="list-img">
                                             <img class="map map-round" data-bind="attr: {'src' : address.staticMapSrc }">
                                             @*<img class="map map-round" src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13&size=350x350&maptype=roadmap
-                    &markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
-                    &markers=color:red%7Clabel:C%7C40.718217,-73.998284" data-bind="tooltip:{title: 'Click to open in Google Maps', placement: 'center'}">*@
+                                                &markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
+                                                &markers=color:red%7Clabel:C%7C40.718217,-73.998284" data-bind="tooltip:{title: 'Click to open in Google Maps', placement: 'center'}">*@
                                             @*<iframe width="400"
-                    height="300"
-                    frameborder="0" style="border:0"
-                    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAXuaY3jzo_vEw-DwyBxmOi6orRLl7m2eI&q=Rainbow+Day+Nursery,Winnipeg+Manitoba"></iframe>*@
+                                                height="300"
+                                                frameborder="0" style="border:0"
+                                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAXuaY3jzo_vEw-DwyBxmOi6orRLl7m2eI&q=Rainbow+Day+Nursery,Winnipeg+Manitoba"></iframe>*@
                                         </div>
                                     </div>
                                 </div>
