--- a/Rainbow.WebMvc/Rainbow.WebMvc/Views/Shared/_Layout.cshtml
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Views/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
     <title>Rainbow Day Nursery</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,400,300,200,100|Roboto:400,100,200,300" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:700&amp;subset=latin,latin-ext" rel="stylesheet">
+    @*<link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700&amp;subset=latin,latin-ext" rel="stylesheet">*@
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">
 
     <link rel="shortcut icon" href="~/favicon.ico?v=0.7" />
     @Styles.Render("~/Content/css/ThirdParty",
