--- a/Rainbow.WebMvc/Rainbow.WebMvc/Views/Shared/_Navigation.cshtml
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Views/Shared/_Navigation.cshtml
@@ -16,7 +16,7 @@
                         <div class="arrow-up-nav-dropdown"></div>
                         <!-- /ko -->
                         <a role="menuitem" tabindex="-1" href="#">
-                            <span class="fa fa-angle-right icon"></span>
+                            <span class="fa fa-circle icon"></span>
                             <p>
                                 <span data-bind="text:name"></span>
                             </p>
