--- a/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_banner.less
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_banner.less
@@ -2,7 +2,6 @@
 .main-banner {
     margin-top: 60px;
     background: #222;
-    height: 280px;
     overflow: hidden;
     position: relative;
     padding-top: 30%;
@@ -10,6 +9,11 @@
 
 .main-banner-background {
     background: linear-gradient(rgba(0, 0, 0, 0.6),rgba(23, 21, 21, 0.2) 80px);
+    background: url('../../Images/kids-group.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    height: 600px;
 }
 
 .main-banner img.kenburns-effect {
@@ -28,24 +32,33 @@
 }
 
 .main-banner .title {
-    color: #ffffff;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
     position: absolute;
-    top: 57px;
+    width: 100%;
+    height: 0;
+    z-index: 2;
+    background: -webkit-linear-gradient(top,rgba(23,23,23,0) 0,rgba(23,23,23,.7) 100%);
+    background: linear-gradient(to bottom,rgba(23,23,23,0) 0,rgba(23,23,23,.7) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00171717", endColorstr="#b3171717", GradientType=0);
+    -moz-transition: height .25s ease-in-out;
+    -o-transition: height .25s ease-in-out;
+    -webkit-transition: height .25s ease-in-out;
+    transition: height .25s ease-in-out;
+    height: 202px;
+    left: 0;
+    bottom: 0;
+    padding: 20px;
 }
 
 .main-banner .title h1 {
+    color: white;
+    font-family: "Roboto";
     margin-bottom: 10px;
-    font-family: 'Open Sans Condensed';
     font-size: 3em;
     line-height: 1.2em;
     font-weight: bold;
 }
 
 .main-banner .title h1 .emphasis {
-    font-family: 'Open Sans Condensed';
     color: orange;
     font-size: 68px;
 }
@@ -53,13 +66,15 @@
 .main-banner .title h1 .normal {
     display: inline-block;
     font-size: 63px;
+    font-weight: 100;
+    word-spacing: -7px;
 }
 
 .main-banner .title .lead {
-    font-family: 'Roboto';
-    font-weight: 400;
-    color: #ddd;
-    font-size: 24px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.84);
+    font-size: 22px;
+    margin-top: 15px;
 }
 
 .jumbotron {
