--- a/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_section.less
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_section.less
@@ -59,7 +59,7 @@
 
 .section-header {
     padding-bottom: 20px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 
 .section-header.tight {
@@ -72,7 +72,8 @@
     font-size: 42px;
     line-height: 47px;
     color: #333;
-    font-weight: bold;
+    font-weight: 500;
+    font-family: "Roboto";
 }
 
 .section-header h2 .subdued {
@@ -83,6 +84,14 @@
 
 .secondary-highlight .section-header h2 {
     color: rgba(255, 255, 255, 0.77);
+}
+
+.section-body {
+    margin-bottom: 35px;
+}
+
+.section-footer {
+
 }
 
 .jumbotron {
