--- a/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_button.less
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_button.less
@@ -10,6 +10,8 @@ a.button-lg:hover {
     cursor: pointer;
     text-decoration: none;
 }
+.test {}
+.test2 {}
 
 a.attention-grabber {
     background: #e46119;
