--- a/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_filter-box.less
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Content/Site/_filter-box.less
@@ -6,12 +6,21 @@
     border-radius: 5px;
 }
 
+.filter-box .title {
+    font-weight: 100;
+    font-size: 18px;
+}
+
 .filter-box h3 {
     font-size: 16px;
     text-transform: uppercase;
     color: rgba(119, 119, 119, 0.76);
     padding-bottom: 11px;
     font-weight: 600;
+}
+
+.filter-box hr {
+    border-color: rgba(255, 255, 255, 0.25);
 }
 
 .filter-box ul {
