--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -1,4 +1,4 @@
-﻿
+
 .main-banner {
     background: #222;
     overflow: hidden;
@@ -9,7 +9,7 @@
 .main-banner-background {
     background: linear-gradient(rgba(0, 0, 0, 0.6),rgba(23, 21, 21, 0.2) 80px);
     background-position-y: center;
-    background: url('../img/kids-group.jpg') no-repeat fixed center;
+    background: url('../img/painted.hands.png') no-repeat fixed center;
     background-size: cover;
     height: 600px;
     background-attachment: fixed;
