Updated gitignore and recreated package/bower.json

--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -1,4 +1,4 @@
-﻿@import "../bootstrap/bootstrap.less";
+@import "../lib/bootstrap/less/bootstrap.less";
 
 //////// General rules
 @import "_normalize.less";
