Set things up for working offline (incl. more fonts than needed).

--- a/src/client/css/_variables.less
+++ b/src/client/css/_variables.less
@@ -1,7 +1,14 @@
-﻿@section-orange:         #f9a601;
+@section-orange:         #f9a601;
 @section-green:          #9bc44c;
 @section-red:            #d2232a;
 @section-dark-blue:      #005e91;
 @section-light-blue:     #008ab0;
 @section-blue:           #1d98cb;
 @section-teal:           #31acc6;
+
+@font-path: "../fonts/";
+@default-font-name: "OpenSans-Regular";
+@default-font-svg-id: "TODO";
+@secondary-font-name: "Roboto-Regular";
+@secondary-font-svg-id: "TODO";
+
