Removed some unused fonts. Minor markup cleanup.

--- a/src/client/css/_list.less
+++ b/src/client/css/_list.less
@@ -1,4 +1,4 @@
-﻿.site-list {
+.site-list {
     list-style-type: none;
     border: 1px solid rgba(255, 255, 255, 0.12);
     border-radius: 5px;
@@ -17,7 +17,7 @@
     transition: all 400ms cubic-bezier(0.215,0.61,0.355,1);
 
 }
-
+ 
 .site-list li:hover {
     background: rgba(67, 88, 113, 0.48);
     -moz-box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
@@ -55,6 +55,10 @@
 
 .list-text .more-info a {
     cursor: pointer;
+}
+
+.site-list .list-text ul li {
+    color:red;
 }
 
 .list h2 {
