--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -46,10 +46,15 @@
 
 .section.color3 {
     background: #222222;
+    background: url('../img/dark_mosaic.png');
 }
 
 .section.color3 p, .section.color3 h2 {
     color: #949494;
+}
+
+.section.color4 {
+    background: #8696b3;
 }
 
 .section .hand {
