Formatted old browser msg, reduced routing config, added gulp help task. Improved gulpfile.

--- a/src/client/css/_core.less
+++ b/src/client/css/_core.less
@@ -1,3 +1,19 @@
 ﻿.center-text {
     text-align: center;
 }
+
+.browsehappy {
+    background: #FF4B4B;
+    color: white;
+    position: absolute;
+    height: 30px;
+    top: 60px;
+    width: 100%;
+    padding-top: 4px;
+    text-align: center;
+}
+
+.browsehappy a {
+    color: white;
+    text-decoration: underline;
+}
