Renamed index to index2 to hide it on the server for now.

--- a/src/client/css/_normalize.less
+++ b/src/client/css/_normalize.less
@@ -1,25 +1,25 @@
 @import "_variables.less";
 
 // I only host open sans locally when developing offline
-@font-face {
-  font-family: 'Open Sans';
-  src: url('@{font-path}@{default-font-name}.eot');
-  src: url('@{font-path}@{default-font-name}.eot?#iefix') format('embedded-opentype'),
-       //url('@{font-path}@{default-font-name}.woff2') format('woff2'),
-       //url('@{font-path}@{default-font-name}.woff') format('woff'),
-       url('@{font-path}@{default-font-name}.ttf') format('truetype'),
-       url('@{font-path}@{default-font-name}.svg#@{default-font-svg-id}') format('svg');
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('@{font-path}@{secondary-font-name}.eot');
-  src: url('@{font-path}@{secondary-font-name}.eot?#iefix') format('embedded-opentype'),
-       //url('@{font-path}@{secondary-font-name}.woff2') format('woff2'),
-       //url('@{font-path}@{secondary-font-name}.woff') format('woff'),
-       url('@{font-path}@{secondary-font-name}.ttf') format('truetype'),
-       url('@{font-path}@{secondary-font-name}.svg#@{secondary-font-svg-id}') format('svg');
-}
+//@font-face {
+//  font-family: 'Open Sans';
+//  src: url('@{font-path}@{default-font-name}.eot');
+//  src: url('@{font-path}@{default-font-name}.eot?#iefix') format('embedded-opentype'),
+//       //url('@{font-path}@{default-font-name}.woff2') format('woff2'),
+//       //url('@{font-path}@{default-font-name}.woff') format('woff'),
+//       url('@{font-path}@{default-font-name}.ttf') format('truetype'),
+//       url('@{font-path}@{default-font-name}.svg#@{default-font-svg-id}') format('svg');
+//}
+//
+//@font-face {
+//  font-family: 'Roboto';
+//  src: url('@{font-path}@{secondary-font-name}.eot');
+//  src: url('@{font-path}@{secondary-font-name}.eot?#iefix') format('embedded-opentype'),
+//       //url('@{font-path}@{secondary-font-name}.woff2') format('woff2'),
+//       //url('@{font-path}@{secondary-font-name}.woff') format('woff'),
+//       url('@{font-path}@{secondary-font-name}.ttf') format('truetype'),
+//       url('@{font-path}@{secondary-font-name}.svg#@{secondary-font-svg-id}') format('svg');
+//}
 
 // =======================================================
 // BASE ELEMENTS
