--- a/src/client/css/_list.less
+++ b/src/client/css/_list.less
@@ -1,10 +1,10 @@
 .site-list {
-    
 }
 
 .site-list > .panel-group .panel {
     border: 1px solid rgba(255, 255, 255, 0.12);
     background-color: transparent;
+    border-radius: 2px;
 }
 
 .site-list > .panel-group .panel-heading {
@@ -14,36 +14,35 @@
 }
 
 .site-list .panel-heading h4 {
-    font-size: 21px; 
+    font-size: 21px;
+    font-weight: 400;
 }
 
 .site-list .panel-heading h4 a {
     width: 100%;
     display: inline-block;
-    padding-left: 10px;
-    padding-top: 6px;
-    padding-bottom: 6px;
+    padding-left: 15px;
+    padding-top: 9px;
+    padding-bottom: 9px;
     text-decoration: none;
 }
 
-.site-list .panel-body {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.09);
-    padding: 30px 20px 0 20px;
-    cursor: pointer;
+.site-list .panel-heading {
     -moz-transition: all 400ms cubic-bezier(0.215,0.61,0.355,1);
     -o-transition: all 400ms cubic-bezier(0.215,0.61,0.355,1);
     -webkit-transition: all 400ms cubic-bezier(0.215,0.61,0.355,1);
     transition: all 400ms cubic-bezier(0.215,0.61,0.355,1);
-
 }
- 
 
-.site-list .panel-body:hover { 
+.site-list .panel-heading:hover {
     background: rgba(67, 88, 113, 0.48);
-    -moz-box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
-    border-color: transparent;
+}
+
+.site-list .panel.panel-default .panel-body {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.09);
+    border-top: 1px solid rgba(255, 255, 255, 0.09);
+    padding: 25px 20px 0 15px;
+    cursor: pointer;
 }
 
 .site-list .list-text {
