--- a/src/client/css/site.css
+++ b/src/client/css/site.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
   font-family: "Open Sans", "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
   -webkit-user-select: text;
   -moz-user-select: text;
@@ -39,6 +39,8 @@ ul {
 a.button-lg {
   padding: 11px 23px;
   border: 1px solid #bbb;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
   border-radius: 7px;
 }
 a.button-lg:hover {
@@ -76,6 +78,8 @@ a.attention-grabber {
   margin-top: 50px;
   background: #222;
   height: 220px;
+  -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
   overflow: hidden;
   position: relative;
@@ -133,6 +137,8 @@ a.attention-grabber {
   cursor: pointer;
   padding-top: 18px;
   padding-bottom: 12px;
+  -moz-transition: all .2s;
+  -o-transition: all .2s;
   -webkit-transition: all .2s;
   transition: all .2s;
 }
@@ -163,17 +169,25 @@ a.attention-grabber {
 }
 .dropdown-menu.with-arrow {
   background: #fff;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
+  -moz-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
 }
 .navbar-nav > li > .dropdown-menu.with-arrow {
+  -webkit-border-top-right-radius: 10px;
   border-top-right-radius: 10px;
+  -webkit-border-top-left-radius: 10px;
   border-top-left-radius: 10px;
 }
 .dropdown-menu.with-arrow > li > a {
   padding-bottom: 15px;
   padding-top: 18px;
   padding-right: 35px;
+  -moz-transition: background 100ms linear;
+  -o-transition: background 100ms linear;
   -webkit-transition: background 100ms linear;
   transition: background 100ms linear;
 }
@@ -209,7 +223,6 @@ a.attention-grabber {
   padding-top: 30%;
 }
 .main-banner-background {
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.6), rgba(23, 21, 21, 0.2) 80px);
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(23, 21, 21, 0.2) 80px);
   background-position-y: center;
   background: url('../img/painted.hands.png') no-repeat fixed center;
@@ -218,6 +231,8 @@ a.attention-grabber {
   background-attachment: fixed;
 }
 .main-banner img.kenburns-effect {
+  -moz-animation: zoom 12s alternate infinite;
+  -o-animation: zoom 12s alternate infinite;
   -webkit-animation: zoom 12s alternate infinite;
   animation: zoom 12s alternate infinite;
   position: absolute;
@@ -233,6 +248,8 @@ a.attention-grabber {
   background: -webkit-linear-gradient(top, rgba(23, 23, 23, 0) 0, rgba(23, 23, 23, 0.55) 100%);
   background: linear-gradient(to bottom, rgba(23, 23, 23, 0) 0, rgba(23, 23, 23, 0.55) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00171717", endColorstr="#b3171717", GradientType=0);
+  -moz-transition: height 0.25s ease-in-out;
+  -o-transition: height 0.25s ease-in-out;
   -webkit-transition: height 0.25s ease-in-out;
   transition: height 0.25s ease-in-out;
   height: 200px;
@@ -278,6 +295,8 @@ a.attention-grabber {
 }
 .section.secondary-highlight {
   background: #2b3848;
+  -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .section.color0 {
@@ -367,6 +386,7 @@ a.attention-grabber {
 .site-list > .panel-group .panel {
   border: 1px solid rgba(255, 255, 255, 0.12);
   background-color: transparent;
+  border-radius: 2px;
 }
 .site-list > .panel-group .panel-heading {
   color: #CACDD1;
@@ -375,26 +395,30 @@ a.attention-grabber {
 }
 .site-list .panel-heading h4 {
   font-size: 21px;
+  font-weight: 400;
 }
 .site-list .panel-heading h4 a {
   width: 100%;
   display: inline-block;
-  padding-left: 10px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-left: 15px;
+  padding-top: 9px;
+  padding-bottom: 9px;
   text-decoration: none;
 }
-.site-list .panel-body {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.09);
-  padding: 30px 20px 0 20px;
-  cursor: pointer;
+.site-list .panel-heading {
+  -moz-transition: all 400ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  -o-transition: all 400ms cubic-bezier(0.215, 0.61, 0.355, 1);
   -webkit-transition: all 400ms cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: all 400ms cubic-bezier(0.215, 0.61, 0.355, 1);
 }
-.site-list .panel-body:hover {
+.site-list .panel-heading:hover {
   background: rgba(67, 88, 113, 0.48);
-  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
-  border-color: transparent;
+}
+.site-list .panel.panel-default .panel-body {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.09);
+  border-top: 1px solid rgba(255, 255, 255, 0.09);
+  padding: 25px 20px 0 15px;
+  cursor: pointer;
 }
 .site-list .list-text {
   padding-bottom: 15px;
@@ -527,11 +551,6 @@ a.attention-grabber {
   border-width: 16px;
   margin-left: -16px;
 }
-/*.arrow-up:after {
-    border-bottom-color: #f3f4f6;   // TODO: how to customize the color based upon usage?
-    border-width: 10px;
-    margin-top: -10px;
-}*/
 .footer {
   height: 33px;
   padding: 5px 20px;
@@ -545,3 +564,4 @@ a.attention-grabber {
   cursor: pointer;
   border-radius: 3px;
 }
+/*# sourceMappingURL=site.css.map */
