Highlighted matched schools. Expanded/collapsed matched sites.

--- a/src/client/css/_list.less
+++ b/src/client/css/_list.less
@@ -63,6 +63,11 @@
     color: rgba(204, 204, 204, 0.67);
 }
 
+.site-list.dark .list-text .highlight-text {
+    color: white;
+    text-shadow: 0 0px 20px rgba(255, 255, 255, 0.71);
+}
+
 .site-list.dark .list-text > p.secondary {
     color: rgba(204, 204, 204, 0.67);
     font-size: 15px;
