--- a/src/client/css/site.css
+++ b/src/client/css/site.css
@@ -119,6 +119,7 @@ a.attention-grabber {
 .navbar {
   background: rgba(34, 34, 34, 0.92);
   height: 60px;
+  border-bottom: 1px solid black;
 }
 .nav.navbar-nav {
   padding-right: 200px;
@@ -126,27 +127,29 @@ a.attention-grabber {
 .navbar-nav > li {
   margin-right: 20px;
 }
-.navbar-nav > li > a {
-  font-size: 19px;
-  color: rgba(255, 255, 255, 0.62);
+.navbar-nav > li a {
+  font-size: 18px;
+  color: white;
   line-height: 30px;
   cursor: pointer;
-  padding-top: 18px;
-  padding-bottom: 12px;
+  padding: 18px 15px 12px 15px;
   -webkit-transition: all .2s;
   transition: all .2s;
+  font-weight: 100;
+  text-decoration: none;
+  display: inline-block;
 }
-.navbar-nav > li > a.active {
+.navbar-nav > li a.active {
   background: #222;
   color: white;
   border-radius: 10px;
 }
-.nav > li > a:focus {
+.nav > li a:focus {
   text-decoration: none;
   color: white;
   background: #333;
 }
-.nav > li > a:hover {
+.nav > li a:hover {
   text-decoration: none;
   color: white;
   background: #222;
