Animation navigation WIP

--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -1,4 +1,4 @@
-//////// General rules
+@import "_animate.less";
 @import "_normalize.less";
 @import "_core.less";
 @import "_button.less";
@@ -13,6 +13,3 @@
 @import "_arrow.less";
 @import "_footer.less";
 @import "_map.less";
-
-//////// Semantic rules
-//@import "_landing.less";
