--- a/src/client/css/site.css
+++ b/src/client/css/site.css
@@ -1,3 +1,21 @@
+.view-slide-in.ng-enter {
+  opacity: 0;
+}
+.view-slide-in.ng-enter.ng-enter-active {
+  top: 0;
+  left: 0;
+  opacity: 1;
+}
+.view-slide-in.ng-leave.ng-leave-active {
+  top: 5px;
+  left: 5px;
+  opacity: 1;
+}
+.view-slide-in.ng-leave {
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
 body {
   font-family: "Open Sans", "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
   -webkit-user-select: text;
