--- a/src/client/js/layout/shell.html
+++ b/src/client/js/layout/shell.html
@@ -4,7 +4,7 @@
     </header>
 
     <div id="content" class="content">
-        <div ui-view="main" class="shuffle-animation"></div>
+        <div ui-view="main" class="view-slide-in"></div>
     </div>
     <footer>
         Footer
