Reworked the sites drop down menu. Removed references to ngparallax.

--- a/src/client/css/_arrow.less
+++ b/src/client/css/_arrow.less
@@ -1,12 +1,12 @@
-﻿/* ========================================================
- *  ARROWS 
- *  From: http://cssarrowplease.com  
+/* ========================================================
+ *  ARROWS
+ *  From: http://cssarrowplease.com
  * ======================================================== */
 .arrow-right {
     position: relative;
 }
- 
-.arrow-right:after { 
+
+.arrow-right:after {
     left: 100%;
     top: 50%;
     border: solid transparent;
@@ -26,7 +26,8 @@
     position: relative;
 }
 
-.arrow-up-nav-dropdown:after, .arrow-up-nav-dropdown:before {
+.arrow-up-nav-dropdown:after,
+.arrow-up-nav-dropdown:before {
     left: 9%;
     bottom: 100%;
     border: solid transparent;
@@ -39,14 +40,12 @@
 }
 
 .arrow-up-nav-dropdown:before {
-    border-bottom-color: white;
+    border-bottom-color: rgba(0, 0, 0, 0.95);
     border-width: 16px;
     margin-left: -16px;
 }
-
 /*.arrow-up:after {
     border-bottom-color: #f3f4f6;   // TODO: how to customize the color based upon usage?
     border-width: 10px;
     margin-top: -10px;
 }*/
-
