Wired up link for sites.

--- a/src/client/css/_list.less
+++ b/src/client/css/_list.less
@@ -1,4 +1,5 @@
 .site-list {
+    
 }
 
 .site-list > .panel-group .panel {
@@ -8,8 +9,8 @@
 }
 
 .site-list > .panel-group .panel-heading {
-    color: #CACDD1;
-    background-color: #2B3848;
+    color: #cacdd1;
+    background-color: #2b3848;
     padding: 0;
 }
 
@@ -42,7 +43,6 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.09);
     border-top: 1px solid rgba(255, 255, 255, 0.09);
     padding: 25px 20px 0 15px;
-    cursor: pointer;
 }
 
 .site-list .list-text {
@@ -65,7 +65,7 @@
 
 .site-list.dark .list-text .highlight-text {
     color: white;
-    text-shadow: 0 0px 20px rgba(255, 255, 255, 0.71);
+    text-shadow: 0 0 20px rgba(255, 255, 255, 0.71);
 }
 
 .site-list.dark .list-text > p.secondary {
